--- a/Page1.html
+++ b/Page1.html
@@ -5,8 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <style type="text/css">
+    	.header{
+    		background-color: tomato;
+    		text-align: center;
+    		padding: 10px;
+    		margin: 0px;
+    		font-size: 40px;
+    		color: white;
+    	}
+    	.header h1{
+    		padding: 15px;
+    		margin: 0px;
+    	}
+    </style>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <div class="header">
+    	<h1>Hello World</h1>
+    </div>
+    <div class="content">
+    	<p>This is the most awosomest page i have ever seen</p>
+    </div>
 </body>
 </html>
